<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".presentation.onboarding.OnboardingFragment">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/content_desc_app_logo"
        app:layout_constraintBottom_toTopOf="@+id/tv_onboarding_body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_onboarding_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginBottom="12dp"
        android:text="@string/desc_survey_header"
        android:textColor="?android:colorPrimaryDark"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_onboarding_body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_onboarding_body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginBottom="28dp"
        android:text="@string/desc_survey_body"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_action"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:gravity="center"
        android:text="@string/label_take_the_survey"
        app:layout_constraintBottom_toTopOf="@id/btn_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_history"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginBottom="32dp"
        android:text="@string/label_visit_previous_answers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>