<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/lpi_survey_progress"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginTop="48dp"
        android:background="@drawable/bg_rounded_layout"
        android:backgroundTint="?android:colorSecondary"
        android:progressBackgroundTint="?android:colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:progress="90" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_question_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lpi_survey_progress"
        tools:text="Q. 1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginTop="48dp"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lpi_survey_progress"
        tools:text="Question -> question?" />

    <ImageView
        android:id="@+id/iv_camera"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginVertical="48dp"
        android:contentDescription="@string/content_desc_take_selfie"
        android:src="@drawable/ic_camera"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_question"
        app:layout_constraintVertical_bias="0"
        app:tint="?android:colorAccent" />

    <Spinner
        android:id="@+id/sp_dropdown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginVertical="48dp"
        android:contentDescription="@string/content_desc_take_selfie"
        android:spinnerMode="dropdown"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_question"
        app:layout_constraintVertical_bias="0"
        app:tint="?android:colorAccent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiet_input"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginVertical="48dp"
        android:contentDescription="@string/content_desc_take_selfie"
        android:inputType="textPostalAddress"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_question"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiet_num_input"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginVertical="48dp"
        android:contentDescription="@string/content_desc_take_selfie"
        android:inputType="number"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_question"
        app:layout_constraintVertical_bias="0"
        tools:visibility="invisible" />

    <LinearLayout
        android:id="@+id/ll_checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginVertical="48dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_question"
        app:layout_constraintVertical_bias="0">

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_multiple_choice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginVertical="48dp"
        app:layout_constraintBottom_toTopOf="@id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_question"
        app:layout_constraintVertical_bias="0">

    </RadioGroup>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        android:layout_marginBottom="@dimen/default_horizontal_margin"
        android:text="@string/label_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/v_button_guideline" />

    <View
        android:id="@+id/v_button_guideline"
        android:layout_width="1dp"
        android:layout_height="10dp"
        android:background="@color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_previous"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="@dimen/default_horizontal_margin"
        android:text="@string/label_previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/v_button_guideline"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>